# clubdejazz

./: .gitignore  CLAUDE.md  dev.sh  import_members.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4f9bad216414_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  events.py  fee_rates.py  memberships.py  users.py
backend/app/api/admin/: __init__.py  events.py  fee_rates.py  members.py  memberships.py  payments.py  users.py
backend/app/core/: __init__.py  deps.py  security.py
backend/app/models/: __init__.py  event.py  membership.py  payment.py  role.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  event.py  membership.py  user.py
backend/app/services/: __init__.py  fee_rate.py  membership.py  membership_service.py  payment.py  seed.py  user.py  user_service.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/events/: page.tsx
frontend/src/app/admin/members/: page.tsx
frontend/src/app/admin/payments/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/admin/: header.tsx  sidebar.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
